kubernetes/infrastructure/gitea/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitea
  labels:
    name: gitea
