kubernetes/infrastructure/gitea/public-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: gitea-public
  namespace: gitea
spec:
  stripPrefix:
    prefixes: []
