kubernetes/infrastructure/gitea/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: gitea
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
      - name: gitea
        image: gitea/gitea:1.21-rootless
        ports:
        - containerPort: 3000
        - containerPort: 2222
        volumeMounts:
        - name: gitea-data
          mountPath: /var/lib/gitea
        - name: gitea-config-dir
          mountPath: /etc/gitea
        - name: custom-theme
          mountPath: /var/lib/gitea/custom/public/assets/css
        - name: custom-head
          mountPath: /var/lib/gitea/custom/templates/custom
        - name: custom-img
          mountPath: /var/lib/gitea/custom/public/assets/img
      volumes:
      - name: gitea-data
        persistentVolumeClaim:
          claimName: gitea-data-pvc
      - name: gitea-config-dir
        emptyDir: {}
      - name: gitea-config-template
        configMap:
          name: gitea-config
      - name: custom-theme
        configMap:
          name: gitea-custom-theme
      - name: custom-head
        configMap:
          name: gitea-templates
      - name: custom-img
        configMap:
          name: gitea-custom-img
