kubernetes/infrastructure/gitea/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-service
  namespace: gitea
  labels:
    app: gitea
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  - port: 22
    targetPort: 22
    protocol: TCP
    name: ssh
  selector:
    app: gitea
